added retrofit implementation for business info and emplyment info

--- a/app/src/main/res/layout/fragment_employment_information.xml
+++ b/app/src/main/res/layout/fragment_employment_information.xml
@@ -69,6 +69,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/employer"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -100,6 +101,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/designaion"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -131,6 +133,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -173,6 +176,7 @@
                             android:textStyle="bold" />
 
                         <EditText
+                            android:id="@+id/contact"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="0.7"
@@ -198,6 +202,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/employer_id"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -219,7 +224,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/previous_button"
+                            android:id="@+id/submit_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
