Cleaned employment information fragment code

--- a/app/src/main/res/layout/fragment_employment_information.xml
+++ b/app/src/main/res/layout/fragment_employment_information.xml
@@ -236,7 +236,7 @@
                             android:textStyle="bold" />
 
                         <Button
-                            android:id="@+id/next_button"
+                            android:id="@+id/cancel_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="5dp"
