Changes made in transactions

--- a/app/src/main/res/layout/fragment_wallet_loans_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_loans_list.xml
@@ -134,18 +134,27 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/ic_bg"
+        android:background="@android:color/transparent"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_wallet_loans_list"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="@android:color/transparent"/>
 
     </com.google.android.material.appbar.AppBarLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:src="@drawable/ic_bg"
+            android:scaleType="centerCrop"/>
+    </RelativeLayout>
 
 
 
