--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -24,14 +24,14 @@
                 <RelativeLayout
                     android:id="@+id/layout_logo"
                     android:layout_width="match_parent"
-                    android:layout_height="350dp">
+                    android:layout_height="300dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="@color/colorPrimary"
                         android:fitsSystemWindows="true"
-                        android:scaleType="fitXY"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/ic_bg" />
 
                 </RelativeLayout>
@@ -464,7 +464,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/layout_weather_2"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="50dp"
+                    android:layout_marginTop="30dp"
                     android:text="Recent Transactions"
                     android:textColor="#404040"
                     android:textSize="20sp"
@@ -476,6 +476,17 @@
                     android:layout_height="match_parent"
                     android:layout_below="@id/label_transactions"
                     android:layout_margin="20dp" />
+                <TextView
+                    android:id="@+id/more_transaction_cards"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MORE . . ."
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_below="@id/recycler_view"
+                    android:layout_alignParentEnd="true"/>
 
             </RelativeLayout>
 
