--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -16,9 +16,9 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -63,6 +63,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <RelativeLayout
+                        android:id="@+id/id_type_layout"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
@@ -124,6 +125,7 @@
                         android:textColor="@android:color/black" />
 
                     <RelativeLayout
+                        android:id="@+id/expiry_date_layout"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="5dp"
@@ -171,18 +173,21 @@
                             android:layout_height="wrap_content"
                             android:text="Front"
                             app:layout_constraintBottom_toTopOf="@id/id_front"
+                            app:layout_constraintEnd_toEndOf="@id/id_front"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintEnd_toEndOf="@id/id_front"/>
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
                             android:id="@+id/id_front"
-                            android:layout_width="150dp"
+                            android:layout_width="130dp"
                             android:layout_height="120dp"
+                            android:layout_marginTop="10dp"
+                            android:padding="5dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/add_default_image"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginStart="10dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/id_back"
+                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/text_view_front" />
 
@@ -191,19 +196,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Back"
-                            app:layout_constraintStart_toStartOf="@id/id_back"
                             app:layout_constraintBottom_toTopOf="@id/id_back"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="@id/id_back"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
                             android:id="@+id/id_back"
-                            android:layout_width="150dp"
+                            android:layout_width="130dp"
                             android:layout_height="120dp"
+                            android:layout_marginTop="10dp"
+                            android:padding="@dimen/dimen_5dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/add_default_image"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginEnd="10dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/text_view_back" />
 
