--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -479,13 +479,15 @@
                     android:id="@+id/more_transaction_cards"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="MORE . . ."
+                    android:text="View All"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
-                    android:layout_marginEnd="20dp"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="25dp"
                     android:layout_marginBottom="20dp"
                     android:layout_below="@id/recycler_view"
                     android:layout_alignParentEnd="true"/>
+
 
             </RelativeLayout>
 
