--- a/app/src/main/res/layout/payment_history.xml
+++ b/app/src/main/res/layout/payment_history.xml
@@ -24,6 +24,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/payment_history_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/appbar"
