--- a/app/src/main/res/layout/payment_schedule.xml
+++ b/app/src/main/res/layout/payment_schedule.xml
@@ -141,6 +141,7 @@
         </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/loan_payment_schedule_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layout1"
