--- a/app/src/main/res/navigation/wallet_nav_graph.xml
+++ b/app/src/main/res/navigation/wallet_nav_graph.xml
@@ -87,7 +87,14 @@
         android:id="@+id/walletLoanStatusPreview"
         android:name="com.cabral.emaishapay.fragments.WalletLoanStatusPreview"
         android:label="Loan Status Preview"
-        tools:layout="@layout/wallet_loanstatus_preview" />
+        tools:layout="@layout/wallet_loanstatus_preview" >
+        <action
+            android:id="@+id/action_walletLoanStatusPreview_to_walletLoanPaymentHistory"
+            app:destination="@id/walletLoanPaymentHistory" />
+        <action
+            android:id="@+id/action_walletLoanStatusPreview_to_walletLoanPaymentSchedule"
+            app:destination="@id/walletLoanPaymentSchedule" />
+    </fragment>
 
     <fragment
         android:id="@+id/walletLoanFarmingDetailsFragment"
@@ -157,5 +164,15 @@
         android:name="com.cabral.emaishapay.fragments.BusinessInformationFragment"
         android:label="Business Information"
         tools:layout="@layout/fragment_business_information" />
+    <fragment
+        android:id="@+id/walletLoanPaymentHistory"
+        android:name="com.cabral.emaishapay.fragments.WalletLoanPaymentHistory"
+        android:label="WalletLoanPaymentHistory"
+        tools:layout="@layout/payment_history"/>
+    <fragment
+        android:id="@+id/walletLoanPaymentSchedule"
+        android:name="com.cabral.emaishapay.fragments.WalletLoanPaymentSchedule"
+        android:label="WalletLoanPaymentSchedule"
+        tools:layout="@layout/payment_schedule"/>
 
 </navigation>
