removed confirm loan details endpoint

--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -423,7 +423,7 @@
                             android:background="@color/transparent"
                             android:paddingEnd="10dp"
                             android:paddingRight="10dp"
-                            android:text="@string/label_confirm"
+                            android:text="@string/next"
                             android:textColor="@color/white"
                             android:textSize="@dimen/button_text_size"
                             android:textStyle="bold"/>
