added implementation for flling account forms when editing them

--- a/app/src/main/res/layout/loan_preview.xml
+++ b/app/src/main/res/layout/loan_preview.xml
@@ -119,6 +119,7 @@
                     android:gravity="end"/>
 
                 <TextView
+                    android:id="@+id/loan_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
